fix: double scrollbar

--- a/apify-docs-theme/src/theme/custom.css
+++ b/apify-docs-theme/src/theme/custom.css
@@ -727,7 +727,7 @@ aside button[class*="collapseSidebarButton"] svg {
 }
 
 .navbar-sidebar__items {
-    height: calc(100vh - 68px);
+    height: calc(100vh - 197px);
 }
 
 .navbar-sidebar__brand {
